<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abs9"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btdepthead"
        android:layout_width="146dp"
        android:layout_height="58dp"
        android:layout_marginBottom="472dp"
        android:background="@color/blue"
        android:text="@string/dpthead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btteacher"
        android:layout_width="146dp"
        android:layout_height="58dp"
        android:background="@color/blue"
        android:text="@string/teacher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btdepthead"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/btstudent"
        android:layout_width="146dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:background="@color/blue"
        android:text="@string/student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btteacher"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/btstoremanager"
        android:layout_width="146dp"
        android:layout_height="58dp"
        android:background="@color/blue"
        android:text="@string/storemanager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btstudent"
        app:layout_constraintVertical_bias="0.327" />

</androidx.constraintlayout.widget.ConstraintLayout>